# KCAD

./: .gitignore  CMakeLists.txt  DEPENDENCIES  DEPENDENCIES.txt  LICENSE  README.md  imgui.ini  toolchain_linux.cmake  toolchain_macos.cmake
3rdparty_build/: .gitignore  CMakeLists.txt
3rdparty_build/bgfx/: .gitignore
shared/vscode_files_FYI/: c_cpp_properties.json  launch.json  settings.json
src/: bgfx_bridge.cpp  bgfx_bridge.hpp  context.cpp  context.hpp  main.cpp  main_wnd_canvas.cpp  main_wnd_canvas.hpp  main_wnd_canvas_coords.cpp  main_wnd_canvas_coords.hpp  main_wnd_canvas_vertices.cpp  main_wnd_canvas_vertices.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  workaround_macos_bgfx_mt.h
src/imgui_impl_bgfx/: fs_ocornut_imgui.bin.hpp  imgui_impl_bgfx.cpp  imgui_impl_bgfx.hpp  vs_ocornut_imgui.bin.hpp
src/qrc/: main.qml
src/shaders/: f_main_wnd_canvas.sc  f_simple.sc  f_texture.sc  v_main_wnd_canvas.sc  v_simple.sc  v_texture.sc  varying.def.sc
src/simple_ini/: ConvertUTF.c  ConvertUTF.h  SimpleIni.h
src/temp_codes/: draw_textures.cpp  draw_textures.hpp
src/ui/: ui.cpp  ui.hpp
